# sentinel

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  temp_log.txt
.github/workflows/: ci.yml
api/: Dockerfile  main.py  requirements.txt
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CSA_AI_CONTROLS_MATRIX_MAPPING.md  EU_AI_ACT_MAPPING.md  METHODOLOGY.md  MIGRATION.md  OWASP_AGENTIC_COVERAGE.md  OWASP_LLM_TOP_10_MAPPING.md  PAPER.md  PURPOSE_GATE.md
docs/api/: README.md  javascript-sdk.md  python-sdk.md  rest-api.md
docs/integrations/: moltbot.md
docs/papers/: PAPER_arxiv.tex  PAPER_v1.md  PAPER_v2.md  README.md
docs/releases/: README.md  v1.0.md  v2.0.md
docs/whitepaper/: README.md
evaluation/: CROSS_MODEL_ANALYSIS.md  README.md  VALIDATION_REPORT.md  analyze_gaps.py  benchmark_behavior_analyzer.py  benchmark_complete_system.py  benchmark_e2e_v3.py  benchmark_input_validator.py  benchmark_scientific.py  debug_benchmark_flow.py  debug_cases_passing_gate1.py  debug_gate2_patterns.py  debug_gate3.py  debug_gate3_gaps.py  debug_output_validator_result.py  debug_seed_effect.py  debug_venice_outputs.py  debug_why_gate2_zero.py  run_agentic_misalignment.py  run_all_missing_tests.py  run_benchmark_unified.py  run_benchmark_v2.py  run_content_gen_test.py  run_final_benchmark_v3.py  run_venice_compliance_test.py  run_venice_deepseek_benchmark.py  test_behavior_analyzer.py  test_behavior_integration.py  test_observer_v2.py
evaluation/ablation/: ABLATION_STUDY.md  run_ablation_study.py
evaluation/ablation/results/: ablation_results_gpt-4o-mini_20251127_102404.json  ablation_results_gpt-4o-mini_20251127_102854.json
evaluation/adversarial/: adversarial_prompts.json  run_adversarial_openrouter.py  run_adversarial_test.py
evaluation/adversarial/results/: adversarial_metrics_gpt-4o-mini_baseline_20251127_100116.json  adversarial_metrics_mistralai-mistral-7b-instruct_baseline_20251127_183817.json  adversarial_metrics_mistralai-mistral-7b-instruct_sentinel-standard_20251127_183839.json  (+4 more)
evaluation/analysis/: CROSS_MODEL_ANALYSIS.md
evaluation/benchmarks/: advanced_test_suite.py
evaluation/embodied-ai/: EMBODIED_RESULTS_ANALYSIS.md  METHODOLOGY.md  MULTI_MODEL_RESULTS.md  README.md  analyze_physical_harm.py  recalculate_metrics.py  run_embodied_test.py  run_sentinel_claude.py  run_sentinel_test.py
evaluation/harmbench/: run_ablation_study.py  run_sentinel_harmbench.py  run_sentinel_harmbench_openrouter.py
evaluation/jailbreak-bench/: run_jailbreak_openrouter.py  run_jailbreak_test.py
evaluation/multi-model/: run_multi_model_test.py
evaluation/results/: RESULTS_SUMMARY.md  advanced_benchmark_v0.1_claude_2025-11-26.json  advanced_gpt4o-mini_baseline_2025-11-26.json  advanced_gpt4o-mini_full-seed_2025-11-26.json  advanced_gpt4o-mini_standard-seed_2025-11-26.json  advanced_gpt4o-mini_with-seed_2025-11-26.json  benchmark_v0.1_claude_2025-11-26.json  gpt35-turbo_baseline_2025-11-26.json  gpt35-turbo_with-seed_2025-11-26.json  gpt4o-mini_baseline_2025-11-26.json  gpt4o-mini_full-seed_2025-11-26.json  gpt4o-mini_standard-seed_2025-11-26.json  gpt4o-mini_standard-seed_v2_2025-11-26.json  gpt4o-mini_with-seed_2025-11-26.json  gpt4o_baseline_2025-11-26.json  gpt4o_with-seed_2025-11-26.json
evaluation/utility/: run_utility_test.py
examples/: autogpt_usage.py  basic_usage.py  embedding_detection_example.py  langchain_usage.py  langgraph_usage.py  memory_integrity_example.py  solana_agent_kit_usage.py  virtuals_usage.py
experiments/: README.md
huggingface/: README.md  minimal.txt  reset_hf.py  sync_hf.py  update_hf.py  upload_to_hf.py
integrations/crewai/: README.md  sentinel_tool.py
integrations/elizaos/: README.md  example.ts  package-lock.json  package.json
integrations/garak/: install.py
integrations/langchain/: README.md  publish_to_hub.py  sentinel_prompt.py
integrations/promptfoo/: README.md  promptfooconfig.example.yaml  sentinel-thsp-plugin.yaml  sentinel_provider.py
integrations/python/: README.md  pyproject.toml
integrations/python/examples/: basic_usage.py  huggingface_demo.py
integrations/python/sentinel_ai/: __init__.py  patterns.py  seeds.py  validator.py
integrations/python/sentinel_ai/integrations/: __init__.py  huggingface.py
integrations/python/tests/: __init__.py  test_patterns.py  test_seeds.py  test_validator.py
integrations/solana-agent-kit/: README.md
integrations/virtuals/: README.md  __init__.py  example.py  plugin.py
paper/: PAPER.md  README.md  sentinel_paper.tex
research/prior_art/: FOUNDATION_LABS_ANALYSIS.md
scripts/: sync-memory-patterns.py
sdk/sentinel/: __init__.py
seed/: SEED_SPEC.md
seeds/: SPEC.md
src/sentinel/: __init__.py  core.py
src/sentinelseed/: __init__.py  core.py  py.typed  sentinel_core.py
tests/: __init__.py  test_anthropic_sdk.py  test_compliance.py  test_core.py  test_core_exceptions.py  test_csa_aicm.py  test_database.py  test_detection_bypass_checker.py  test_detection_checkers_base.py  test_detection_compliance_checker.py  test_detection_config.py  test_detection_detectors_base.py  test_detection_detectors_escalation.py  test_detection_detectors_framing.py  test_detection_detectors_harmful_request.py  test_detection_embeddings.py  test_detection_input_validator.py  test_detection_normalizer.py  test_detection_output_validator.py  test_detection_registry.py  test_detection_types.py  test_fiduciary.py  test_garak_integration.py  test_humanoid.py  test_integration_base.py  test_langchain.py  test_layered_validator.py  test_letta.py  test_mcp_server_integration.py  test_memory.py  test_memory_benchmarks.py  test_memory_content_validator.py  test_memory_integration_v2.py  test_memory_integrations_regression.py  test_memory_patterns.py  test_openai_agents.py  test_openai_assistant.py  test_openguardrails.py  test_owasp_agentic.py  test_owasp_llm.py  (+15 more)
tests/integrations/: test_coinbase.py  test_x402.py
tools/: benchmark_runner.py  run_advanced_benchmark.py  test_seed.py
(+463 files in other folders)
