[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelseed"
version = "2.6.0"
description = "AI safety toolkit with THSP protocol, memory integrity, and fiduciary AI - Practical alignment for developers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sentinel Team", email = "team@sentinelseed.dev"}
]
keywords = [
    "ai",
    "safety",
    "alignment",
    "llm",
    "guardrails",
    "thsp",
    "ai-agents",
    "langchain",
    "langgraph",
    "crewai",
    "openai",
    "openai-agents",
    "anthropic",
    "virtuals",
    "game-sdk",
    "solana",
    "autogpt",
    "garak",
    "pyrit",
    "dspy",
    "stanford",
    "red-teaming",
    "security-testing",
    "fiduciary",
    "openguardrails",
    "memory-integrity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
openai-agents = ["openai-agents>=0.6.0"]
anthropic = ["anthropic>=0.18.0"]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
langgraph = ["langgraph>=0.0.1"]
crewai = ["crewai>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
mcp = ["mcp>=0.1.0"]
virtuals = ["game-sdk>=0.1.1"]
garak = ["garak>=0.9.0"]
pyrit = ["pyrit>=0.5.0"]
dspy = ["dspy>=3.0.0"]
all = [
    "openai>=1.0.0",
    "openai-agents>=0.6.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.1",
    "crewai>=0.1.0",
    "llama-index-core>=0.10.0",
    "game-sdk>=0.1.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://sentinelseed.dev"
Documentation = "https://sentinelseed.dev/docs"
Repository = "https://github.com/sentinel-seed/sentinel"
Issues = "https://github.com/sentinel-seed/sentinel/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sentinelseed = ["seeds/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
