[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinelseed"
version = "2.25.1"
description = "AI safety toolkit with THSP protocol for LLMs, AI agents, and humanoid robots - EU AI Act compliance and practical alignment for developers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sentinel Team", email = "team@sentinelseed.dev"}
]
keywords = [
    "ai",
    "safety",
    "alignment",
    "llm",
    "guardrails",
    "thsp",
    "ai-agents",
    "langchain",
    "langgraph",
    "crewai",
    "openai",
    "openai-agents",
    "anthropic",
    "virtuals",
    "game-sdk",
    "solana",
    "autogpt",
    "garak",
    "pyrit",
    "dspy",
    "stanford",
    "letta",
    "memgpt",
    "stateful-agents",
    "red-teaming",
    "security-testing",
    "fiduciary",
    "openguardrails",
    "memory-integrity",
    "ros2",
    "robotics",
    "robot-safety",
    "humanoid",
    "humanoid-robot",
    "isaac-lab",
    "isaac-sim",
    "nvidia",
    "iso-15066",
    "collaborative-robot",
    "cobot",
    "tesla-optimus",
    "boston-dynamics",
    "figure-ai",
    "eu-ai-act",
    "ai-regulation",
    "compliance",
    "article-5",
    "high-risk-ai",
    "human-oversight",
    "risk-management",
    "transaction-simulation",
    "preflight",
    "jupiter",
    "goplus",
    "honeypot-detection",
    "slippage",
    "defi-safety",
    "token-security",
    "coinbase",
    "coinbase-agentkit",
    "agentkit",
    "x402",
    "http-402",
    "payment-validation",
    "evm",
    "base-chain",
    "web3",
    "defi",
    "agno",
    "multi-agent",
    "agent-framework",
    "google-adk",
    "gemini",
    "vertex-ai",
    "google-cloud",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "typing_extensions>=4.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
openai-agents = ["openai-agents>=0.6.0"]
anthropic = ["anthropic>=0.18.0"]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
langgraph = ["langgraph>=0.0.1"]
crewai = ["crewai>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
mcp = ["mcp>=0.1.0"]
virtuals = ["game-sdk>=0.1.1"]
garak = ["garak>=0.9.0"]
pyrit = ["pyrit>=0.10.0"]
dspy = ["dspy>=3.0.0"]
letta = ["letta-client>=1.0.0"]
preflight = ["httpx>=0.25.0"]
coinbase = ["httpx>=0.25.0", "pydantic>=2.0.0"]
coinbase-agentkit = ["coinbase-agentkit>=0.1.0", "httpx>=0.25.0", "pydantic>=2.0.0"]
x402 = ["httpx>=0.25.0", "pydantic>=2.0.0"]
agno = ["agno>=2.0.0"]
google-adk = ["google-adk>=0.1.0"]
all = [
    "openai>=1.0.0",
    "openai-agents>=0.6.0",
    "anthropic>=0.18.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.1",
    "crewai>=0.1.0",
    "llama-index-core>=0.10.0",
    "game-sdk>=0.1.1",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "python-dotenv>=1.0.0",
    "mypy>=1.0.0",
    "pydantic>=2.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[project.urls]
Homepage = "https://sentinelseed.dev"
Documentation = "https://sentinelseed.dev/docs"
Repository = "https://github.com/sentinel-seed/sentinel"
Issues = "https://github.com/sentinel-seed/sentinel/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sentinelseed = ["seeds/*.txt", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/sentinelseed"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
    "*/example.py",
    "*/examples/*",
    "*/providers/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "except ImportError:",
    "raise ImportError",
]
fail_under = 50  # Temporarily lowered while coverage improvements are pending
show_missing = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "sentinelseed.*"
disallow_untyped_defs = false
check_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101"]  # assert usage is fine in tests
