[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ai"
version = "0.3.0"
description = "Practical AI Alignment Toolkit - Safety seeds and validation for LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sentinel AI Team", email = "sentinel@example.com"}
]
keywords = [
    "ai",
    "alignment",
    "safety",
    "llm",
    "security",
    "guardrails",
    "prompt-injection",
    "jailbreak",
    "transformers",
    "openai",
    "langchain",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
huggingface = [
    "transformers>=4.20.0",
    "torch>=1.10.0",
]
openai = [
    "openai>=1.0.0",
]
langchain = [
    "langchain>=0.1.0",
]
all = [
    "sentinel-ai[huggingface,openai,langchain]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sentinel-ai/sentinel"
Documentation = "https://sentinel-ai.github.io/docs"
Repository = "https://github.com/sentinel-ai/sentinel"
Issues = "https://github.com/sentinel-ai/sentinel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel_ai*"]

[tool.setuptools.package-data]
sentinel_ai = ["seeds/*.txt", "patterns/*.txt"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
